try new code style

--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
 </head>
 
 <body>
-    <div class="main-box" id="main">
-
-    </div>
+    <canvas id="Matrix"></canvas>
 
 
     <script src="app.js"></script>
